--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>User Profile - {{ username|e }}</title>
-
+    <link rel="stylesheet" href="style.css">
 <!-- Aqil's -->
   <!---  <style>    
         body {
