--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>User Profile - {{ username|e }}</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+</head>
 
 <!-- Aqil's -->
   <!---  <style>    
@@ -38,7 +40,7 @@
         }
     </style> -->
 
-</head>
+
 <body>
     <div class="profile-card">
         <h2>Welcome, {{ username|e }}</h2>
