--- a/static/login.css
+++ b/static/login.css
@@ -1,247 +1,84 @@
-@import url("https://fonts.googleapis.com/css?family=Nunito:400,600,700");
+@import url('https://fonts.googleapis.com/css?family=Raleway:400,700');
 
-* {
-  box-sizing: border-box;
+*,*:before,*:after{box-sizing:border-box}
+
+body{
+  min-height:100vh;
+  font-family: 'Raleway', sans-serif;
 }
 
-body {
-  font-family: "Nunito", sans-serif;
-  color: rgba(0, 0, 0, 0.7);
-}
-
-.container {
-  height: 200vh;
-  background-image: url(https://images.unsplash.com/photo-1538137524007-21e48fa42f3f?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=ac9fa0975bd2ebad7afd906c5a3a15ab&auto=format&fit=crop&w=1834&q=80);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-.modal {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 60px;
-  background: rgba(0, 0, 0, 0.5); /* dark overlay */
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  transition: 0.4s;
-}
-
-.modal-container {
-  display: flex;
-  max-width: 720px;
-  width: 100%;
-  border-radius: 10px;
-  overflow: hidden;
-  position: absolute;
-  opacity: 0;
-  pointer-events: none;
-  transition-duration: 0.3s;
-  background: #fff;
-  transform: translateY(100px) scale(0.4);
-}
-
-.modal-title {
-  font-size: 26px;
-  margin: 0;
-  font-weight: 400;
-  color: #003366; /* navy blue */
-}
-
-.modal-desc {
-  margin: 6px 0 30px 0;
-  color: #004080; /* deep blue */
-}
-
-.modal-left {
-  padding: 60px 30px 20px;
-  background: #fff;
-  flex: 1.5;
-  transition-duration: 0.5s;
-  transform: translateY(80px);
-  opacity: 0;
-}
-
-.modal-button {
-  color: #336699; /* medium navy blue */
-  font-family: "Nunito", sans-serif;
-  font-size: 18px;
-  cursor: pointer;
-  border: 0;
-  outline: 0;
-  padding: 10px 40px;
-  border-radius: 30px;
-  background: rgb(255, 255, 255);
-  box-shadow: 0 10px 40px rgba(0, 51, 102, 0.16); /* navy shadow */
-  transition: 0.3s;
-}
-
-.modal-button:hover {
-  border-color: rgba(255, 255, 255, 0.2);
-  background: rgba(255, 255, 255, 0.8);
-}
-
-.modal-right {
-  flex: 2;
-  font-size: 0;
-  transition: 0.3s;
-  overflow: hidden;
-}
-
-.modal-right img {
-  width: 100%;
-  height: 100%;
-  transform: scale(2);
-  object-fit: cover;
-  transition-duration: 1.2s;
-}
-
-.modal.is-open {
-  height: 100%;
-  background: rgba(0, 0, 0, 0.85);
-}
-
-.modal.is-open .modal-button {
-  opacity: 0;
-}
-
-.modal.is-open .modal-container {
-  opacity: 1;
-  transition-duration: 0.6s;
-  pointer-events: auto;
-  transform: translateY(0) scale(1);
-}
-
-.modal.is-open .modal-right img {
-  transform: scale(1);
-}
-
-.modal.is-open .modal-left {
-  transform: translateY(0);
-  opacity: 1;
-  transition-delay: 0.1s;
-}
-
-.modal-buttons {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.modal-buttons a {
-  color: rgba(0, 51, 102, 0.6);
-  font-size: 14px;
-}
-
-.sign-up {
-  margin: 60px 0 0;
-  font-size: 14px;
-  text-align: center;
-}
-
-.sign-up a {
-  color: #336699;
-}
-
-.input-button {
-  padding: 8px 12px;
-  outline: none;
-  border: 0;
-  color: #fff;
-  border-radius: 4px;
-  background: #336699; /* medium blue */
-  font-family: "Nunito", sans-serif;
-  transition: 0.3s;
-  cursor: pointer;
-}
-
-.input-button:hover {
-  background: #003366; /* navy blue */
-}
-
-.input-label {
-  font-size: 11px;
-  text-transform: uppercase;
-  font-family: "Nunito", sans-serif;
-  font-weight: 600;
-  letter-spacing: 0.7px;
-  color: #336699;
-  transition: 0.3s;
-}
-
-.input-block {
-  display: flex;
-  flex-direction: column;
-  padding: 10px 10px 8px;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  margin-bottom: 20px;
-  transition: 0.3s;
-}
-
-.input-block input {
-  outline: 0;
-  border: 0;
-  padding: 4px 0 0;
-  font-size: 14px;
-  font-family: "Nunito", sans-serif;
-}
-
-.input-block input::placeholder {
-  color: #ccc;
-  opacity: 1;
-}
-
-.input-block:focus-within {
-  border-color: #336699;
-}
-
-.input-block:focus-within .input-label {
-  color: rgba(51, 102, 153, 0.8);
-}
-
-.icon-button {
-  outline: 0;
-  position: absolute;
-  right: 10px;
-  top: 12px;
-  width: 32px;
-  height: 32px;
-  border: 0;
-  background: none;
-  padding: 0;
-  cursor: pointer;
-}
-
-.scroll-down {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  color: #336699;
-  font-size: 32px;
-  font-weight: 800;
-  transform: translate(-50%, -50%);
-}
-
-.scroll-down svg {
-  margin-top: 16px;
-  width: 52px;
-  fill: currentColor;
-}
-
-@media (max-width: 750px) {
-  .modal-container {
-    width: 90%;
+.container{
+  position:absolute;
+  width:100%;
+  height:100%;
+  overflow:hidden;
+  
+  &:hover,&:active{
+    .top, .bottom{
+      &:before, &:after{
+        margin-left: 200px;
+        transform-origin: -200px 50%;
+        transition-delay:0s;
+      }
+    }
+    
+    .center{
+      opacity:1;
+      transition-delay:0.2s;
+    }
   }
-  .modal-right {
-    display: none;
+}
+
+.top, .bottom{
+  &:before, &:after{
+    content:'';
+    display:block;
+    position:absolute;
+    width:200vmax;
+    height:200vmax;
+    top:50%;left:50%;
+    margin-top:-100vmax;
+    transform-origin: 0 50%;
+    transition:all 0.5s cubic-bezier(0.445, 0.05, 0, 1);
+    z-index:10;
+    opacity:0.65;
+    transition-delay:0.2s;
+  }
+}
+
+.top{
+  &:before{transform:rotate(45deg);background:#e46569;}
+  &:after{transform:rotate(135deg);background:#ecaf81;}
+}
+
+.bottom{
+  &:before{transform:rotate(-45deg);background:#60b8d4;}
+  &:after{transform:rotate(-135deg);background:#3745b5;}
+}
+
+.center{
+  position:absolute;
+  width:400px;
+  height:400px;
+  top:50%;left:50%;
+  margin-left:-200px;
+  margin-top:-200px;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding:30px;
+  opacity:0;
+  transition:all 0.5s cubic-bezier(0.445, 0.05, 0, 1);
+  transition-delay:0s;
+  color:#333;
+  
+  input{
+    width:100%;
+    padding:15px;
+    margin:5px;
+    border-radius:1px;
+    border:1px solid #ccc;
+    font-family:inherit;
   }
 }
