--- a/templates/profile.html
+++ b/templates/profile.html
@@ -57,7 +57,6 @@
     </div>
 </body>
 </html> -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -71,15 +70,10 @@
             <h2 class="title">Welcome, {{ username|e }}</h2>
             <p class="info"><strong>Email:</strong> {{ email|e }}</p>
 
-            {% if exposed_flag %}
-                <p class="warning">⚠️ Oops... something leaked:</p>
-                <div class="flag highlight">{{ exposed_flag|e }}</div>
-            {% else %}
-                <p class="info"><em>No secrets exposed. All looks good!</em></p>
-            {% endif %}
+            <p class="info"><em>No secrets exposed. All looks good!</em></p>
 
             <p class="info">
-                🔐 Cookie says you're: 
+                 Cookie says you're: 
                 <strong class="highlight">{{ request.cookies.get('username') }}</strong>
             </p>
 
@@ -88,3 +82,4 @@
     </div>
 </body>
 </html>
+
